Wrapped summary panel corrected.

--- a/public_html/layouts/basic/skins/style.css
+++ b/public_html/layouts/basic/skins/style.css
@@ -6110,11 +6110,7 @@ border1px{
 	text-align: center;
 }
 .wrappedPanelRight .rotatedText{
-    right: -13px;
-	color: white;
-	top: calc(50% - 10px);
-	width: max-content;
-	height: max-content;
+	color: #fff;
 }
 .wrappedPanelOnScroll {
 	position: fixed;
